# my_dev_setup_sample

./: .dockerignore  .editorconfig  .env.sample  .gitignore  .pre-commit-config.yaml  README.md  alembic.ini  app.Dockerfile  docker-compose.obs.yml  docker-compose.yml  otelcollector.Dockerfile  pyproject.toml  taskfile.yml  worker.Dockerfile
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  deploy.yml  terraform-apply.yml  terraform-plan.yml
alembic/: env.py
alembic/versions/: 5a9a996e1875_init.py
deploy/: push_ecr.sh
deploy/terraform/: README.md  main.tf  outputs.tf  ssm_parameters.tf  terraform.tfvars.example  variables.tf
deploy/terraform/modules/network/: main.tf
deploy/terraform/modules/ssm_parameters/: main.tf  variables.tf
deploy/terraform/prd/: main.tf
deploy/terraform/stg/: .gitignore  ecr.tf  ecs.tf  ecs_cluster.tf  ecs_service_app.tf  ecs_service_worker.tf  ecs_td_app.tf  ecs_td_migration.tf  ecs_td_worker.tf  main.tf  stg.auto.tfvars  terraform.tfvars.example  variables.tf
infra/nginx/: nginx.conf
infra/nginx/html/static/: index.html  style.css
infra/observability/alertmanager/: alertmanager.yml
infra/observability/grafana/provisioning/datasources/: datasource.yml
infra/observability/loki/: loki-config.yml
infra/observability/otel/: otel-collector.yaml
infra/observability/prometheus/: prometheus.yml
infra/observability/prometheus/rules/: basic.yml
infra/observability/promtail/: promtail-config.yml
infra/observability/tempo/: tempo.yaml
src/app/: db.py  logging_conf.py  main.py  middleware_config.py
src/app/application/users/: users_service.py
src/app/core/: logging_conf.py
src/app/domain/: errors.py
src/app/domain/common/: email.py
src/app/domain/users/: policies.py  repository.py  user.py  user_age.py  users_repository.py
src/app/infra/db/: core.py
src/app/infra/db/models/: __init__.py  user_model.py
src/app/infra/messaging/: kafka_client.py
src/app/infra/repositories/: mock_users_repository.py  sqlalchemy_users_repository.py
src/app/infra/users/: mock_users_repository.py
src/app/middleware/: __init__.py  access_log.py  middleware_config.py
src/app/observability/: sentry.py
src/app/presentation/: error_handlers.py
src/app/presentation/controllers/: async_proc.py  auth.py  debug.py  health.py  users_controller.py  users_deps.py
src/app/presentation/dto/: users_request.py  users_response.py
src/app/workers/: async_print_worker.py
src/tests/: test_middleware.py
src/tests/application/users/: test_users_service.py
src/tests/domain/common/: test_email.py
src/tests/domain/users/: test_user.py  test_user_age.py
src/tests/infra/: test_repositories_contract.py  test_users_repositories_contract.py
src/tests/presentation/controllers/: test_etc.py  test_users_conrtoller.py
src/worker/: async_worker.py  dlq_checker.py
trash/: import.tf
