[project]
name = "fastapi-postgres-uv-starter"
version = "0.1.0"
description = "FastAPI + Postgres devcontainer starter with uv and pre-commit"
readme = "README.md"
requires-python = ">=3.12"


dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy>=2.0",
    "asyncpg>=0.29",
    "pydantic>=2.7",
]


[dependency-groups]
dev = ["ruff>=0.6", "pytest>=8.3", "httpx>=0.27", "pre-commit>=3.8"]


[tool.ruff]
fix = true
line-length = 100
extend-select = ["I"]


[tool.uv]
# uv の設定（任意）。インストール先 .venv をプロジェクトローカルに固定
python-preference = "only-managed"
