[project]
name = "fastapi-postgres-uv-starter"
version = "0.1.0"
description = "FastAPI + Postgres devcontainer starter with uv and pre-commit"
readme = "README.md"
requires-python = ">=3.12"


dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy>=2.0",
    "asyncpg>=0.29",
    "pydantic>=2.7",
]


[dependency-groups]
dev = [
    "ruff>=0.6",
    "pytest>=8.3",
    "httpx>=0.27",
    "pre-commit>=3.8",
    "mypy>=1.5",
]


[tool.ruff]
fix = true
line-length = 100
extend-select = ["I"]


[tool.mypy]
python_version = "3.12"
check_untyped_defs = true
disallow_untyped_defs = true
exclude = '(^|/)src/tests/test_.*\.py$'


[tool.pytest.ini_options]
pythonpath = ["./src"]
testpaths = ["./src/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]


[tool.uv]
# uv の設定（任意）。インストール先 .venv をプロジェクトローカルに固定
python-preference = "only-managed"
