[project]
name = "fastapi-postgres-uv-starter"
version = "0.1.0"
description = "FastAPI + Postgres devcontainer starter with uv and pre-commit"
readme = "README.md"
requires-python = ">=3.12"


dependencies = [
    "fastapi[standard]>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy>=2.0",
    "asyncpg>=0.29",
    "pydantic>=2.7",
    "prometheus-fastapi-instrumentator>=7.1.0",
    "sentry-sdk[fastapi]>=2.42.1",
    "opentelemetry-distro",
    "opentelemetry-sdk",
    "opentelemetry-exporter-otlp",
    "opentelemetry-instrumentation",
    "opentelemetry-instrumentation-fastapi",
    "opentelemetry-instrumentation-asgi",
    "opentelemetry-instrumentation-logging",
    "opentelemetry-instrumentation-requests",
    "opentelemetry-instrumentation-urllib3",
    "opentelemetry-instrumentation-psycopg2",
    "opentelemetry-instrumentation-redis",
    "opentelemetry-instrumentation-sqlalchemy>=0.59b0",
    "alembic>=1.17.1",
    "greenlet>=3.2.4",
    "psycopg2-binary>=2.9.11",
    "boto3>=1.40.69",
    "boto3-stubs>=1.40.69",
    "authlib[crypto]>=1.3.0",
    "itsdangerous>=2.1.2",
    "redis>=5.0.0",
]


[dependency-groups]
dev = [
    "ruff>=0.6",
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
    "pre-commit>=3.8",
    "mypy>=1.5",
    "ty>=0.0.1a26",
    "types-authlib>=1.6.5.20251005",
]


[tool.ruff]
fix = true
line-length = 100
extend-select = ["I"]


[tool.mypy]
python_version = "3.12"
check_untyped_defs = true
disallow_untyped_defs = true
exclude = '(^|/)src/tests/test_.*\.py$'


[tool.pytest.ini_options]
pythonpath = ["./src"]
testpaths = ["./src/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"


[tool.uv]
# uv の設定（任意）。インストール先 .venv をプロジェクトローカルに固定
python-preference = "only-managed"
